objects/National_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Strategic_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Staffing Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending Needs Assessment</fullName>
                </value>
                <value>
                    <fullName>Ranking Scrape</fullName>
                </value>
                <value>
                    <fullName>Technical Review</fullName>
                </value>
                <value>
                    <fullName>Budget &amp; Metropage Recommendations</fullName>
                </value>
                <value>
                    <fullName>Performance Estimates</fullName>
                </value>
                <value>
                    <fullName>Proposal Creation</fullName>
                </value>
                <value>
                    <fullName>Submit Proposal for Review</fullName>
                </value>
                <value>
                    <fullName>Proposal Review</fullName>
                </value>
                <value>
                    <fullName>Proposal Approved</fullName>
                </value>
                <value>
                    <fullName>Revised Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Revised Proposal Review</fullName>
                </value>
                <value>
                    <fullName>Marketing Analysis</fullName>
                </value>
                <value>
                    <fullName>Recommend Strategy</fullName>
                </value>
                <value>
                    <fullName>Demo Creation</fullName>
                </value>
                <value>
                    <fullName>Submit Contract for Review</fullName>
                </value>
                <value>
                    <fullName>Contract Review</fullName>
                </value>
                <value>
                    <fullName>Contract Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Client</fullName>
                </value>
                <value>
                    <fullName>Contract Signed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Revised Contract Submitted</fullName>
                </value>
                <value>
                    <fullName>Revised Contract Review</fullName>
                </value>
                <value>
                    <fullName>Sent Back to Sales</fullName>
                </value>
                <value>
                    <fullName>Custom Demo Slides Sent to Sales</fullName>
                </value>
                <value>
                    <fullName>Prospect On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Request_for_Ranking_Scrape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Request for Ranking Scrape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subset_of_locations_to_rank_for__c</fullName>
        <inlineHelpText>(separate by commas)</inlineHelpText>
        <label>Subset of locations to rank for</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Revised_Items__c</fullName>
        <inlineHelpText>Summary of revised items for review (please attach updated proposal with subject “revised proposal and date”</inlineHelpText>
        <label>Summary of Revised Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supported_Segment__c</fullName>
        <label>Supported Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Review_Details__c</fullName>
        <label>Technical Review Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Review__c</fullName>
        <label>Technical Review - What is Needed?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier2__c</fullName>
        <formula>if(
 ispickval(National_Relationship_Type__c ,"Manufacturer"),
"Tier 0",
if(or(
 Current_Relationships_with_Franchises__c &gt; 100,
 Current_Total_Spend__c &gt;50000,
 Estimated_In__c &gt; 200000),
"Tier 1", 
if(or(and(
 Current_Relationships_with_Franchises__c &gt; 50,
Current_Relationships_with_Franchises__c &lt;101),
and( 
Current_Total_Spend__c &gt;20000,
Current_Total_Spend__c &lt; 50001),
and( 
Estimated_In__c &gt; 50000,
Estimated_In__c &lt; 200001)),
"Tier 2", 
if(or(and(
 Current_Relationships_with_Franchises__c &gt; 10,
Current_Relationships_with_Franchises__c &lt;51),
and( 
Current_Total_Spend__c &gt;10000,
Current_Total_Spend__c &lt; 20001),
and( 
Estimated_In__c &gt; 20000,
Estimated_In__c &lt; 50001)),
"Tier 3",
if(or(
 Current_Relationships_with_Franchises__c &lt; 10,
Current_Total_Spend__c &lt;10001,
Estimated_In__c &lt; 20001),
"Tier 4", 
"No Tier")))))</formula>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Budget__c</fullName>
        <label>Total Marketing Budget</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Locations__c</fullName>
        <label>Total Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sponsored_Budget_C__c</fullName>
        <label>Total Sponsored Budget C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Sponsored_Budgets__c</fullName>
        <formula>Proposed_Pricing_Total_Sponsored_Budget__c</formula>
        <label>Total Sponsored Budgets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touch_Plan_Frequency__c</fullName>
        <label>Touch Plan Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Call_is_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5. Transition Call is Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Timeline_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Transition timeline is determined and delivered to the client</inlineHelpText>
        <label>3. Transition Timeline Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_National_Master_Spreadsheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>9. Update National Master Spreadsheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Analysis_Current_State__c</fullName>
        <label>Website Analysis - Current State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate web site with full corporate multipage  local sites - Local sites are designed for conversion</fullName>
                </value>
                <value>
                    <fullName>Corporate web site with full corporate multipage  local sites -Local sites are not designed for conversion</fullName>
                </value>
                <value>
                    <fullName>Corporate web site with full corporate multipage  local sites - Local sites of all different quality</fullName>
                </value>
                <value>
                    <fullName>Corporate website &amp; independent local sites</fullName>
                </value>
                <value>
                    <fullName>Corporate website only</fullName>
                </value>
                <value>
                    <fullName>Corporate website with location pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Analysis_Detail__c</fullName>
        <label>Website Analysis Detail</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Details__c</fullName>
        <label>Website Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Grade__c</fullName>
        <label>Website Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Implementation_Type__c</fullName>
        <label>Website Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mirror Individual Locations</fullName>
                </value>
                <value>
                    <fullName>Mirror Corporate Site</fullName>
                </value>
                <value>
                    <fullName>Custom Adversite Template</fullName>
                </value>
                <value>
                    <fullName>Adversite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <inlineHelpText>The current URL of this client's business.</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adversite – individual locations only</fullName>
                </value>
                <value>
                    <fullName>Adversite + Metropages</fullName>
                </value>
                <value>
                    <fullName>client side</fullName>
                </value>
                <value>
                    <fullName>client side – sub domain/sub folder</fullName>
                </value>
                <value>
                    <fullName>mirror</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_client_side_or_template_fee__c</fullName>
        <formula>((Setup_Fee_per_location__c + MMF_per_location__c + Organic_per_location__c)  *  Participating_Number_of_Locations__c ) + Total_Sponsored_Budgets__c</formula>
        <label>Website (client side or template fee)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_Will_Corporate_be_Paying_For__c</fullName>
        <label>What Will Corporate be Paying For?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>MMF</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>PPC Budget</fullName>
                </value>
                <value>
                    <fullName>Setup Fee</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_most_effective_marketing__c</fullName>
        <inlineHelpText>What is the most effective marketing effort they do</inlineHelpText>
        <label>What is the most effective marketing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_ofline_marketing_efforts_are_in_use__c</fullName>
        <label>What ofline marketing efforts are in use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_online_marketing_efforts_are_in_use__c</fullName>
        <label>What online marketing efforts are in use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_other_metrics_are_valued__c</fullName>
        <label>What other metrics are valued</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_services_do_they_offer__c</fullName>
        <label>What services do they offer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_does_the_client_expect_to_go_live__c</fullName>
        <label>When does the client expect to go live?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whisper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whisper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_Hosts_Local_Sites__c</fullName>
        <label>Who Hosts Local Sites</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_created_maintained_owns_maps__c</fullName>
        <inlineHelpText>Who created, maintained and owns the maps listings (i.e. locally, corporate, third party, not claimed)</inlineHelpText>
        <label>Who created, maintained, owns maps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_maintains_and_updates_local_sites__c</fullName>
        <label>Who maintains and updates local sites</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_will_be_invoiced__c</fullName>
        <label>Who will be invoiced?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_would_be_providing_information__c</fullName>
        <inlineHelpText>Who would be providing information for each location</inlineHelpText>
        <label>Who would be providing information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>corporate</fullName>
                </value>
                <value>
                    <fullName>franchisee/dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_there__c</fullName>
        <label>Relationships with Individual Franchises</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_there_be_a_PVA__c</fullName>
        <inlineHelpText>Will there be a preferred vendor agreement?</inlineHelpText>
        <label>Is there a Preferred Vender Agreement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_there_be_agency_involvement__c</fullName>
        <label>Will there be agency involvement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Involvement</fullName>
                </value>
                <value>
                    <fullName>Corporate Communication Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X0_15_Days__c</fullName>
        <label>0-15 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X15_30_Days__c</fullName>
        <label>15-30 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X30_60_Days__c</fullName>
        <label>30-60 Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Used to submit proposals and contracts to the review committee</description>
    <label>National Support Request</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Support Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Jenna_Initiation_Forms</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Number_of_Potential_Locations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>National_Support_Request__c.New_Initiation_Form,National_Support_Request__c.Initiation_Form</value>
        </filters>
        <label>Jenna - Initiation Forms</label>
    </listViews>
    <listViews>
        <fullName>My_Open_National_Suppoort_Requests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Open National Suppoort Requests</label>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_National_Support_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_National_Support_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Initiation_Form</fullName>
        <active>true</active>
        <label>Tier 4 &amp; Bottoms Up Initiation Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Initiation_Form</fullName>
        <active>true</active>
        <label>New Initiation Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Sale_Questions</fullName>
        <active>true</active>
        <label>Pre-Sale Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proposal_Contract_Review_for_Existing</fullName>
        <active>true</active>
        <label>Proposal/Contract Review for Existing Relationships &amp; Tier 4</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transition_Form</fullName>
        <active>true</active>
        <label>Transition Form</label>
    </recordTypes>
</CustomObject>